--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body scroll="no" style="overflow: hidden" bottom="50">
     <audio autoplay="autopaly">
-        <source src="music/ido.mp3" type="audio/mp3">
+        <source src="ido.mp3" type="audio/mp3">
     </audio>
     <div id="main">
         <div id="error">
