--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 </head>
 
 <body scroll="no" style="overflow: hidden" bottom="50">
-    <audio autoplay="autopaly">
-        <source src="ido.mp3" type="audio/mp3">
+     <audio controls autoplay>
+        <source src="ido.ogg" type="audio/ogg">
+        <source src="ido.mp3" type="audio/mpeg">
     </audio>
     <div id="main">
         <div id="error">
