--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <font color="#3498db"><span class="say">Hi em Trang</span><br>
-                        <span class="say">cái này làm ra</span><br>
-                        <span class="say">     để     </span><br>
-                        <span class="say">nhắc em Trang</span><br>
-                        <span class="say">   trả nợ  </span><br>
-                        <span class="say">-------------</span><br>
-                        <span class="say">Trả tiền ik :v</span><br>
+                    <font color="#3498db"><span class="say">Hello Lê Xuân Huế</span><br>
+                        <span class="say">chúc em sinh nhật vui vẻ</span><br>
+                        <span class="say">luôn tràn ngập tiếng cười</span><br>
+                        <span class="say">có nhiều người yêu</span><br>
+                        <span class="say">thôi thì khuya rồi, chúc e ngủ ngon luôn</span><br>
+                        <span class="say">ngủ ngon mơ đẹp nhé</span><br>
+                        <span class="say">à mà sau này giàu thì đừng quên a -_-</span><br>
                         <span class="say"></span><br>
                         <span class="say"></span><br>
                         <span class="say"> </span><br>
@@ -53,7 +53,7 @@
             </div>
             <div id="clock-box">
                 <span class="STYLE1"></span>
-                <font color="#FF0000">hehe</font>
+                <font color="#FF0000">Chúc mừng sinh nhật Lê Xuân Huế</font>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
         </div>
